RESOLVED FIXED53272
REGRESSION (r65062): Safari loops forever under WebCore::plainTextToMallocAllocatedBuffer()
https://bugs.webkit.org/show_bug.cgi?id=53272
Summary REGRESSION (r65062): Safari loops forever under WebCore::plainTextToMallocAll...
Andy Estes
Reported 2011-01-27 17:26:02 PST
* SUMMARY Safari loops forever in WebCore::plainTextToMallocAllocatedBuffer() * STEPS TO REPRODUCE 1. Go to http://www.kauppalehti.fi, wait a few seconds * RESULTS Safari hangs. * REGRESSION Caused by http://trac.webkit.org/changeset/65062 * NOTES relevant part of the sample: 2240 -[WebFrame(WebInternal) _stringForRange:] 2240 WebCore::plainTextToMallocAllocatedBuffer(WebCore::Range const*, unsigned int&, bool, WebCore::TextIteratorBehavior) 1697 WebCore::TextIterator::advance() 1571 WebCore::TextIterator::handleTextBox() 820 WebCore::TextIterator::emitText(WebCore::Node*, WebCore::RenderObject*, int, int) 699 WebCore::TextIterator::handleTextBox() 52 WebCore::TextIterator::emitText(WebCore::Node*, int, int) 126 WebCore::TextIterator::advance()
Attachments
Webarchive of kauppalehti.fi (1.74 MB, application/x-webarchive)
2011-01-27 17:31 PST, Andy Estes
no flags
Reduction (191 bytes, text/html)
2011-01-27 22:07 PST, Kent Tamura
no flags
Patch (3.74 KB, patch)
2011-01-31 23:07 PST, Kent Tamura
mitz: review+
Andy Estes
Comment 1 2011-01-27 17:26:12 PST
Andy Estes
Comment 2 2011-01-27 17:31:03 PST
Created attachment 80384 [details] Webarchive of kauppalehti.fi Attached a webarchive
Kent Tamura
Comment 3 2011-01-27 22:07:44 PST
Created attachment 80418 [details] Reduction
Kent Tamura
Comment 4 2011-01-27 23:54:36 PST
Kent Tamura
Comment 5 2011-01-31 23:07:22 PST
Kent Tamura
Comment 6 2011-01-31 23:22:09 PST
(In reply to comment #5) > Created an attachment (id=80720) [details] > Patch Oops, I forgot to add the updated test expectation. I'll commit with the expectation.
Kent Tamura
Comment 7 2011-02-01 00:06:23 PST
Note You need to log in before you can comment on or make changes to this bug.