REGRESSION (r65062): Safari loops forever under WebCore::plainTextToMallocAllocatedBuffer() https://bugs.webkit.org/show_bug.cgi?id=53272

Reviewed by Dan Bernstein.

Source/WebCore:

* editing/TextIterator.cpp:
(WebCore::TextIterator::handleTextBox): Pass the appropriate renderer to emitText().

LayoutTests:

* fast/dom/inner-text-first-letter.html:
  - Add a new test case reproducing the bug.
  - Remove unnecessary text output.
* fast/dom/inner-text-first-letter-expected.txt:

Canonical link: https://commits.webkit.org/67341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77224 268f45cc-cd09-0410-ab3c-d52691b4dbfc